Exceptions and issues fixed